# candlefish-website

./: .env.secrets.example  .gitattributes  .pre-commit-config.yaml  .releaserc.js  5470_highline_inventory_categorized.txt  ARCHITECTURAL_REVIEW_REPORT_2025.md  AUTONOMOUS_DEPLOYMENT_INSTRUCTIONS.md  AUTONOMOUS_DEPLOYMENT_SUMMARY.md  CLAUDE_V2_PERFECT_SYSTEM.md  DATABASE_PERFORMANCE_ANALYSIS_REPORT.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOYMENT_TRACKER.md  DEPLOYMENT_VERIFICATION_COMPLETE.md  DEPLOYMENT_VERIFICATION_REPORT.md  DEPLOY_NOW.md  FIX_AWS_SECRETS_NOW.md  MOBILE_SECURITY_MIGRATION_COMPLETE.md  MOBILE_SECURITY_SUMMARY.md  MULTI_PLATFORM_SECURITY_COMPLETE.md  NETLIFY_SECURITY_MIGRATION_COMPLETE.md  PERFORMANCE_PROFILING_REPORT.md  README-DEPLOYMENT.md  RECOVERY_PLAYBOOK.md  SECRETS_CREDENTIAL_MAP.yaml  SECRETS_IMPLEMENTATION_ROADMAP.md  SECRETS_MANAGEMENT_DEPLOYMENT_COMPLETE.md  SECRET_ROTATION_COMPLETE.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_AUDIT_REPORT_REALTIME_COLLABORATION.md  SECURITY_DASHBOARD_DEPLOYMENT_ARCHITECTURE.md  SECURITY_DASHBOARD_DEPLOYMENT_RUNBOOK.md  SECURITY_DASHBOARD_GRAPHQL_API.md  SECURITY_DASHBOARD_PREVIEW.md  SECURITY_DASHBOARD_PRODUCTION_REVIEW.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_VALIDATION_COMPLETE.md  WORKFLOW_AUTOMATION_IMPLEMENTATION.md  WORKFLOW_SETUP_GUIDE.md  WORKLOG.md  amy_tomlan_buyer_list.txt  (+41 more)
.github/: pull_request_template.md
.husky/: pre-commit
5470_S_Highline_Circle/: .env.example  5470_furnishings_inventory_v2_compat.xlsx  CLAUDE.md  CLOS_INTEGRATION_COMPLETE.md  CONNECTION_TEST_REPORT.md  FINAL_DELIVERED_TO_JON.html  FINAL_EMAIL_TO_JON.txt  NO_AUTH_SUCCESS.md  README.md  README_FINAL.md  SECURITY_AUDIT_REPORT.md  add_missing_inventory_fixed.sql  clos-integration.sh  package.json  pnpm-lock.yaml  run-frontend.sh  start-inventory.sh  test-data-flow.sh
calendar/: Candlefish-Meeting.ics  Candlefish-Meeting.ics.debug
cdn/: cloudflare-config.js  cloudflare-config.json  cloudfront-config.json
clos/: AUTHENTICATION_SYSTEM.md  CLAUDE.md  CLOS-COMPLETE-INVENTORY.md  Makefile  README.md  api-specification.yaml  architecture-design.md  backend-architecture.md  comprehensive-api-design-summary.md  deploy-production.sh  diagnostics_2025-08-27_08-27-45.txt  docker-compose.test.yml  docker-compose.yml  enhanced-database-schema.sql  go.mod  go.sum  implementation-roadmap.md  nanda-dashboard.html  security-performance-guide.md  simple-login.html  start-production.sh  stop-production.sh  test-login.html  verify-login.sh
database/: indexes.sql
deployment/: DEPLOYMENT_GUIDE.md  deploy-monitoring.sh  deploy-production-eks.sh  deploy-staging.sh  docker-compose.staging.yml  manage-local.sh  quick-deploy.sh  setup-grafana-dashboard.sh  test-full-functionality.sh  verify-security-dashboard.sh
docs/: ACCESSIBILITY.md  INCIDENT_RESPONSE_PLAYBOOK.md  MANUAL_SECRET_ROTATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  (+18 more)
sdks/python/: .gitignore  CHANGELOG.md  MANIFEST.in  PACKAGE_READY.md  README.md  pyproject.toml
sdks/python/candlefish_claude_config/: __init__.py  auth.py  client.py  exceptions.py  models.py  websocket.py
sdks/python/examples/: basic_usage.py  websocket_events.py
sdks/python/scripts/: build_package.py  validate_sdk.py
sdks/python/tests/: __init__.py  test_auth.py  test_client.py  test_models.py
(+1912 files in other folders)
