[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candlefish-claude-config"
version = "2.0.0"
authors = [
    {name = "Candlefish AI", email = "devops@candlefish.ai"},
]
description = "Python SDK for Candlefish Claude Configuration System v2.0"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Systems Administration",
]
keywords = ["claude", "ai", "configuration", "sdk", "candlefish"]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "websockets>=11.0.0",
    "typing-extensions>=4.5.0",
    "python-dateutil>=2.8.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "httpx>=0.24.0",
    "respx>=0.20.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.urls]
Homepage = "https://candlefish.ai"
Documentation = "https://docs.candlefish.ai/sdks/python"
Repository = "https://github.com/candlefish/claude-config-python"
"Bug Reports" = "https://github.com/candlefish/claude-config-python/issues"
Changelog = "https://github.com/candlefish/claude-config-python/blob/main/CHANGELOG.md"
"Candlefish AI" = "https://candlefish.ai"

[tool.hatch.version]
path = "candlefish_claude_config/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["candlefish_claude_config"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=candlefish_claude_config --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["candlefish_claude_config"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]